--- a/Dockerfile.android
+++ b/Dockerfile.android
@@ -2,7 +2,9 @@ FROM gengjiawen/v8-build
 
 WORKDIR ~/v8
 
-RUN cd ~/v8 && git checkout 7.3-lkgr \
+RUN apt install openjdk-8-jdk -y && update-java-alternatives -s java-1.8.0-openjdk-amd64
+
+RUN cd ~/v8 && 
         && build/install-build-deps-android.sh
 
 RUN cd ~/v8 && echo "target_os = ['android']" >> ../.gclient \
