--- a/Dockerfile.android
+++ b/Dockerfile.android
@@ -1,5 +1,8 @@
 FROM gengjiawen/v8-build
 
+ENV ANDROID_HOME=/root/v8/third_party/android_sdk/public
+ENV ANDROID_NDK_HOME=/root/v8/third_party/android_ndk
+
 RUN apt install openjdk-8-jdk -y && update-java-alternatives -s java-1.8.0-openjdk-amd64
 
 RUN cd ~/v8 && build/install-build-deps-android.sh
