--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,12 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - run: *build-docker
+      - <<: *build-docker
   deploy:
     <<: *defaults
     steps:
       - checkout
-      - run: *build-docker
+      - <<: *build-docker
       - run:
           name: Deploy docker
           command: |
