--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,10 @@ defaults: &defaults
 
 aliases:
   - &build-docker
-    run: docker build -t gengjiawen/v8-build .
-    run: docker run --rm --name v8 gengjiawen/v8-build bash -c "npx envinfo"
-    run: docker build -t gengjiawen/v8-build:android -f Dockerfile.android .
-    run: docker run --rm --name v8-android gengjiawen/v8-build:android bash -c "npx envinfo"
+    - run: docker build -t gengjiawen/v8-build .
+    - run: docker run --rm --name v8 gengjiawen/v8-build bash -c "npx envinfo"
+    - run: docker build -t gengjiawen/v8-build:android -f Dockerfile.android .
+    - run: docker run --rm --name v8-android gengjiawen/v8-build:android bash -c "npx envinfo"
       
 jobs:
   test:
