--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ defaults: &defaults
 
 aliases:
   - &build-docker
-    - run: docker build -t gengjiawen/v8-build .
+    run: docker build -t gengjiawen/v8-build .
     - run: docker run --rm --name v8 gengjiawen/v8-build bash -c "npx envinfo"
     - run: docker build -t gengjiawen/v8-build:android -f Dockerfile.android .
     - run: docker run --rm --name v8-android gengjiawen/v8-build:android bash -c "npx envinfo"
@@ -16,12 +16,12 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      *build-docker
+      - *build-docker
   deploy:
     <<: *defaults
     steps:
       - checkout
-      *build-docker
+      - *build-docker
       - run:
           name: Deploy docker
           command: |
