--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,10 @@ defaults: &defaults
   machine: true
   working_directory: ~/project
 
-aliases:
-  - &build-docker
-    run: docker build -t gengjiawen/v8-build .
+commands:
+  build-docker:
+   steps:
+    - run: docker build -t gengjiawen/v8-build .
     - run: docker run --rm --name v8 gengjiawen/v8-build bash -c "npx envinfo"
     - run: docker build -t gengjiawen/v8-build:android -f Dockerfile.android .
     - run: docker run --rm --name v8-android gengjiawen/v8-build:android bash -c "npx envinfo"
@@ -16,12 +17,12 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - *build-docker
+      - build-docker
   deploy:
     <<: *defaults
     steps:
       - checkout
-      - *build-docker
+      - build-docker
       - run:
           name: Deploy docker
           command: |
