--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ defaults: &defaults
   working_directory: ~/project
 
 commands:
-  build-docker:
+  build_docker:
    steps:
     - run: docker build -t gengjiawen/v8-build .
     - run: docker run --rm --name v8 gengjiawen/v8-build bash -c "npx envinfo"
@@ -17,12 +17,12 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - build-docker
+      - build_docker
   deploy:
     <<: *defaults
     steps:
       - checkout
-      - build-docker
+      - build_docker
       - run:
           name: Deploy docker
           command: |
