add arm64 build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ commands:
     steps:
       - run: docker build -t gengjiawen/v8-build .
       - run: docker run --rm --name v8 gengjiawen/v8-build bash -c "npx envinfo"
+      - run: docker build -t gengjiawen/v8-build:amr64 -f Dockerfile.arm64 .
       - run: docker build -t gengjiawen/v8-build:android -f Dockerfile.android .
       - run: docker run --rm --name v8-android gengjiawen/v8-build:android bash -c "npx envinfo"
       
