--- a/Dockerfile.android
+++ b/Dockerfile.android
@@ -5,7 +5,8 @@ ENV ANDROID_NDK_HOME=/root/v8/third_party/android_ndk
 
 RUN apt install openjdk-8-jdk -y && update-java-alternatives -s java-1.8.0-openjdk-amd64
 
-RUN cd ~/v8/build && ./install-build-deps-android.sh && git reset HEAD --hard
+RUN cd ~/v8 && sed -i 's/${dev_list} snapcraft/${dev_list}/g' build/install-build-deps.sh \
+    && cd ~/v8/build && ./install-build-deps-android.sh && git reset HEAD --hard
 
 RUN cd ~/v8 && echo "target_os = ['android']" >> ../.gclient \
         && gclient sync
