feat: add devtools to arm64 Image

--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -2,6 +2,10 @@ FROM gengjiawen/v8-build
 
 RUN apt install ccache qemu qemu-user-static -y
 RUN cd ~/v8 && build/linux/sysroot_scripts/install-sysroot.py --arch=arm64
+
+RUN mkdir -p ~/devtools && cd ~/devtools && fetch devtools-frontend && cd devtools-frontend && gclient sync \
+        && chown -R root:root /root/devtools/devtools-frontend
+
 # Failed hack for https://github.com/circleci/circleci-docs/issues/5319
 RUN find / -xdev \! -uid 0 -exec chown -R root:root {} +
 
